--- a/src/main/resources/telemetry.conf
+++ b/src/main/resources/telemetry.conf
@@ -44,6 +44,14 @@ cinnamon.akka.cluster {
   split-brain-resolver-events = on
 }
 
+cinnamon.akka {
+  persistence.entities {
+    "sharded:ArtifactState" {
+      report-by = group
+    }
+  }
+}
+
 cinnamon.jmx-importer {
   beans = [
     {
