--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,20 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+<!--
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <scope>test</scope>
+        </dependency>
+-->
     </dependencies>
 
     <build>
@@ -221,6 +235,11 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <arg>-Xlint:unchecked</arg>
+                        <arg>-Xlint:deprecation</arg>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -286,7 +305,7 @@
                 </executions>
                 <configuration>
                     <language>Java</language>
-                    <generateClient>false</generateClient>
+                    <generateClient>true</generateClient> <!-- we need the client for multi-node tests -->
                     <generateServer>true</generateServer>
                 </configuration>
             </plugin>
