multi-node test: fix cluster formation

--- a/src/test/resources/multinode-test-cassandra.conf
+++ b/src/test/resources/multinode-test-cassandra.conf
@@ -10,9 +10,13 @@ akka.actor.testkit.typed {
 akka {
     loglevel = INFO
 
-    remote.artery.canonical {
-      hostname = "127.0.0.1"
-      port = 0
+    remote.artery {
+      enabled = on
+      transport = tcp
+      canonical {
+        hostname = "127.0.0.1"
+        port = 0
+      }
     }
 
     actor {
@@ -23,39 +27,37 @@ akka {
         }
     }
 
-    cluster.log-info-verbose = on
+    cluster {
+#        log-info-verbose = on
+
+        # sharding must be specified, even if role isn't hosting shards due to validation while joining
+        sharding {
+          number-of-shards = 20
+          passivate-idle-entity-after = 2 minutes
+          role = "sharded"
+        }
+
+        shutdown-after-unsuccessful-join-seed-nodes = 20s
+
+        downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+        split-brain-resolver.active-strategy=keep-majority
+        split-brain-resolver.keep-majority {
+          # if the 'role' is defined the decision is based only on members with that 'role'
+          role = "sharded"
+        }
+    }
 
     management.cluster.bootstrap.contact-point-discovery {
       service-name = "ArtifactStateCluster"
       discovery-method = config
+      # boostrap filters ports with the same IP assuming they are previous instances running on the same node
+      # unless a port is specified
+      port-name = "management"
       required-contact-point-nr = 3
       contact-with-all-contact-points = true
     }
 
-    # using Cassandra here
-    persistence {
-        journal.plugin = "akka.persistence.cassandra.journal"
-        snapshot-store.plugin = "akka.persistence.cassandra.snapshot"
-    }
-
     coordinated-shutdown.exit-jvm = on
-}
-
-# NOTE: autocreation of journal and snapshot should not be used in production
-akka.persistence.cassandra {
-  journal {
-    keyspace-autocreate = true
-    tables-autocreate = true
-  }
-  snapshot {
-    keyspace-autocreate = true
-    tables-autocreate = true
-  }
-}
-datastax-java-driver {
-  advanced.reconnect-on-init = true
-  basic.contact-points = ["localhost:9042"]
-  basic.load-balancing-policy.local-datacenter = "datacenter1"
 }
 
 akka.grpc.client {
