--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
         </dependency>
         <dependency>
             <groupId>com.lightbend.akka.management</groupId>
+            <artifactId>akka-management-cluster-http_${scala.binary.version}</artifactId>
+            <version>${akka.management.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lightbend.akka.management</groupId>
             <artifactId>akka-management-cluster-bootstrap_${scala.binary.version}</artifactId>
             <version>${akka.management.version}</version>
         </dependency>
