restore akka.persistence.journal.plugin & snapshot-store.plugin removed by mistake

--- a/src/main/resources/cluster-application.conf
+++ b/src/main/resources/cluster-application.conf
@@ -20,6 +20,10 @@ akka {
 
   coordinated-shutdown.terminate-actor-system = on
 
+  persistence {
+    journal.plugin = "akka.persistence.cassandra.journal"
+    snapshot-store.plugin = "akka.persistence.cassandra.snapshot"
+  }
 }
 
 clustering {
