try to stabilize cluster formation on Docker

--- a/src/main/resources/cluster-application-docker-dns.conf
+++ b/src/main/resources/cluster-application-docker-dns.conf
@@ -22,7 +22,10 @@ akka {
 
   #management-config
   management.cluster.bootstrap {
-    contact-point-discovery.service-name = cluster
+    contact-point-discovery {
+      service-name = cluster
+      contact-with-all-contact-points = false
+    }
   }
   #management-config
 
