--- a/pom.xml
+++ b/pom.xml
@@ -6,25 +6,26 @@
 
     <groupId>com.lightbend</groupId>
     <artifactId>akka-typed-distributed-state-blog-java</artifactId>
-    <version>1.1</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <akka.version>2.6.19</akka.version>
-        <akka.http.version>10.2.9</akka.http.version>
-        <akka.management.version>1.1.3</akka.management.version>
-        <akka.grpc.version>2.1.4</akka.grpc.version>
+        <akka.version>2.6.20</akka.version>
+        <akka.http.version>10.2.10</akka.http.version>
+        <akka.management.version>1.1.4</akka.management.version>
+        <akka.grpc.version>2.1.6</akka.grpc.version>
         <grpc.version>1.43.2</grpc.version>
         <project.encoding>UTF-8</project.encoding>
         <!-- Declare Cinnamon version -->
-        <cinnamon.version>2.16.2</cinnamon.version>
+        <cinnamon.version>2.17.0</cinnamon.version>
         <!-- The Scala versions -->
         <scala.version>2.13.8</scala.version>
         <scala.binary.version>2.13</scala.binary.version>
         <app.configfile>cluster-application-docker-dns.conf</app.configfile>
         <docker.maven.plugin.version>0.40.2</docker.maven.plugin.version>
+        <tests.skip>true</tests.skip>
     </properties>
 
     <repositories>
@@ -231,6 +232,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <skipTests>${tests.skip}</skipTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -246,6 +250,7 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <!-- Add plugin to correctly copy Lightbend Telemetry (Cinnamon) agent -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -315,68 +320,66 @@
             </plugin>
 
             <!-- docker image creation -->
+            <!-- https://github.com/fabric8io/docker-maven-plugin -->
+            <!-- NOTE: This isn't working properly yet, sbt docker:publishLocal works fine. -->
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>${docker.maven.plugin.version}</version>
+                <version>0.40.2</version>
                 <configuration>
+                    <verbose>true</verbose>
+                    <useColor>true</useColor>
                     <images>
                         <image>
-                            <name>%a:%v</name>
-                            <registry>docker.io/${docker.username}</registry>
+                            <name>akka-typed-blog-distributed-state/cluster</name>
                             <build>
-                                <from>eclipse-temurin/eclipse-temurin:17-alpine</from>
-
-                                <env>
-                                    <LOGBACK_CONFIG>-Dlogback.configurationFile=/opt/logging/logback.xml -Dakka.loggers.0=akka.event.slf4j.Slf4jLogger -Dakka.loglevel=DEBUG -Dakka.logging-filter=akka.event.slf4j.Slf4jLoggingFilter</LOGBACK_CONFIG>
-                                </env>
-
-                                <runCmds>
-                                    <run>apk add bash curl</run>
-                                    <run>mkdir -p /home/cloudflow /opt /prometheus</run>
-                                    <run>addgroup -g 185 -S cloudflow</run>
-                                    <run>adduser -u 185 -S -h /home/cloudflow -s /sbin/nologin cloudflow cloudflow</run>
-                                    <run>curl https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.11.0/jmx_prometheus_javaagent-0.11.0.jar -o /prometheus/jmx_prometheus_javaagent.jar</run>
-                                    <run>chmod a+x /opt/akka-entrypoint.sh</run>
-                                </runCmds>
-
+                                <from>docker.io/library/eclipse-temurin:17</from>
+                                <tags>
+                                    <tag>${project.version}</tag>
+                                </tags>
+                                <entryPoint>
+                                    <exec>
+                                        <arg>java</arg>
+                                        <arg>-cp</arg>
+                                        <arg>/maven/*</arg>
+                                        <!-- /cinnamon-agent folder matches the assembly name below -->
+                                        <arg>-javaagent:/cinnamon-agent/cinnamon-agent.jar</arg>
+                                        <arg>com.lightbend.artifactstate.app.StartNode</arg>
+                                    </exec>
+                                </entryPoint>
                                 <assemblies>
-
+                                    <!-- An inline assembly to add the agent jar to the Docker image -->
                                     <assembly>
-                                        <name>lightbend-telemetry-agent</name>
-                                        <targetDir>/opt/cloudflow</targetDir>
-                                        <inline>
-                                            <files>
-                                                <file>
-                                                    <source>${basedir}/target/dependency/cinnamon-agent-${cinnamon.version}.jar</source>
-                                                </file>
-                                            </files>
-                                        </inline>
-                                        <user>185</user>
-                                    </assembly>
-
-                                    <assembly>
-                                        <name>additional-resources</name>
+                                        <name>cinnamon-agent</name>
                                         <mode>dir</mode>
-                                        <targetDir>/opt</targetDir>
-                                        <user>185</user>
                                         <inline>
-                                            <files>
-                                                <file>
-                                                    <source>${basedir}/src/main/resources/akka-entrypoint.sh</source>
-                                                </file>
-                                            </files>
+                                            <includeBaseDirectory>false</includeBaseDirectory>
+                                            <fileSets>
+                                                <fileSet>
+                                                    <directory>${project.build.directory}/dependency</directory>
+                                                    <outputDirectory>.</outputDirectory>
+                                                    <fileMode>0644</fileMode>
+                                                </fileSet>
+                                            </fileSets>
                                         </inline>
                                     </assembly>
-
+                                    <assembly>
+                                        <descriptorRef>artifact-with-dependencies</descriptorRef>
+                                    </assembly>
                                 </assemblies>
-
-                                <user>185</user>
-
                             </build>
                         </image>
                     </images>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>build-docker-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!-- END docker image creation -->
 
