--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <scala.binary.version>2.13</scala.binary.version>
         <app.configfile>cluster-application-docker-dns.conf</app.configfile>
         <docker.maven.plugin.version>0.40.2</docker.maven.plugin.version>
-        <tests.skip>true</tests.skip>
+        <tests.skip>false</tests.skip>
     </properties>
 
     <repositories>
