--- a/microk8s-multi-dc/endpoints-dc1/endpoint-deployment.yaml
+++ b/microk8s-multi-dc/endpoints-dc1/endpoint-deployment.yaml
@@ -30,6 +30,8 @@ spec:
           value: "akka.persistence.r2dbc.query"
         - name: JAVA_OPTS
           value: "-Dconfig.resource=endpoint-application-k8s-multi-dc.conf"
+        - name: JAVA_TOOL_OPTIONS
+          value: "-Dconfig.resource=endpoint-application-k8s-multi-dc.conf"
         image: localhost:32000/akka-typed-blog-distributed-state/cluster:0.1.26
         #health
         readinessProbe:
