--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -1,9 +1,11 @@
-version: '2.2'
+version: '3'
+
 services:
   postgres-db:
     image: postgres:latest
     ports:
       - 5432:5432
     environment:
+      POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
