--- a/src/main/resources/telemetry.conf
+++ b/src/main/resources/telemetry.conf
@@ -8,11 +8,13 @@ cinnamon {
 cinnamon.akka.actors {
   "/user/*" {
     report-by = group
+    traceable = on
   }
   "sharded-group" {
     report-by = group
     includes = ["/system/sharding/ArtifactState/*"]
     #    excludes = ["akka.cluster.sharding.Shard"]
+    traceable = on
   }
 }
 
@@ -21,6 +23,7 @@ cinnamon.akka.http.servers {
     paths {
       "*" {
         metrics = on
+        traceable = on
       }
     }
   }
@@ -48,9 +51,19 @@ cinnamon.akka {
   persistence.entities {
     "sharded:ArtifactState" {
       report-by = group
+      traceable = on
     }
   }
 }
+
+#cinnamon.opentracing {
+#  tracers = [opentelemetryshim]
+#
+#  opentelemetryshim {
+#    debug = on
+#    factory-class = "com.lightbend.opentelemetry.OpenTracingToOTelTracerFactory"
+#  }
+#}
 
 cinnamon.jmx-importer {
   beans = [
@@ -86,4 +99,8 @@ cinnamon.jmx-importer {
       ]
     }
   ]
+}
+
+app {
+  opentracing.opentelemetryshim.enableGlobalTracer = true
 }
