update for maven compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -113,14 +113,19 @@
             <version>${akka.management.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-discovery_${scala.binary.version}</artifactId>
+            <version>${akka.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.lightbend.akka.management</groupId>
             <artifactId>akka-management-cluster-bootstrap_${scala.binary.version}</artifactId>
             <version>${akka.management.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-discovery_${scala.binary.version}</artifactId>
-            <version>${akka.version}</version>
+            <groupId>com.lightbend.akka.discovery</groupId>
+            <artifactId>akka-discovery-kubernetes-api_${scala.binary.version}</artifactId>
+            <version>${akka.management.version}</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
