--- a/microk8s/endpoints/endpoint-deployment.yaml
+++ b/microk8s/endpoints/endpoint-deployment.yaml
@@ -22,7 +22,9 @@ spec:
       - env:
         - name: JAVA_OPTS
           value: "-Dconfig.resource=endpoint-application-k8s.conf"
-        image: localhost:32000/akka-typed-blog-distributed-state/cluster:0.1.3
+        - name: JAVA_TOOL_OPTIONS
+          value: "-Dconfig.resource=endpoint-application-k8s.conf"
+        image: localhost:32000/akka-typed-blog-distributed-state/cluster:1.1.7
         #health
         readinessProbe:
           httpGet:
