set cinnamon.opentracing.overrides.activate-context-only-spans = off

--- a/src/main/resources/cluster-application-k8s.conf
+++ b/src/main/resources/cluster-application-k8s.conf
@@ -1,6 +1,6 @@
 include "cluster-application-base.conf"
 include "telemetry-prometheus.conf"
-#include "telemetry-tracing.conf"
+include "telemetry-tracing.conf"
 
 akka {
 
