--- a/src/main/resources/endpoint-application-k8s.conf
+++ b/src/main/resources/endpoint-application-k8s.conf
@@ -1,6 +1,6 @@
 include "endpoint-application-base.conf"
 include "telemetry-prometheus.conf"
-#include "telemetry-tracing.conf"
+include "telemetry-tracing.conf"
 
 akka {
 
