--- a/src/main/resources/telemetry-tracing.conf
+++ b/src/main/resources/telemetry-tracing.conf
@@ -1,4 +1,5 @@
 cinnamon.opentracing {
+  overrides.activate-context-only-spans = off
   tracers = [opentelemetryshim]
 
   opentelemetryshim {
@@ -15,6 +16,6 @@ cinnamon.opentracing {
 }
 
 app {
-  opentracing.opentelemetryshim.enabled = false
+  opentracing.opentelemetryshim.enabled = true
   opentracing.opentelemetryshim.enableGlobalTracer = true
 }
