--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   postgres-db:
-    image: postgres:latest
+    image: postgres:13.3-alpine
+    volumes:
+      - ./ddl-scripts/create_tables_postgres.sql:/docker-entrypoint-initdb.d/10-init.sql
     ports:
       - 5432:5432
     environment:
