--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
         <scala.binary.version>2.13</scala.binary.version>
         <app.configfile>cluster-application-docker-dns.conf</app.configfile>
         <docker.maven.plugin.version>0.40.2</docker.maven.plugin.version>
-        <tests.skip>true</tests.skip>
+        <testcontainers.version>1.17.6</testcontainers.version>
+        <tests.skip>false</tests.skip>
     </properties>
 
     <repositories>
@@ -55,6 +56,13 @@
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-http-bom_${scala.binary.version}</artifactId>
                 <version>${akka.http.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -229,7 +237,11 @@
             <version>2.4</version>
             <scope>test</scope>
         </dependency>-->
-
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
