--- a/src/main/resources/telemetry.conf
+++ b/src/main/resources/telemetry.conf
@@ -7,7 +7,8 @@ cinnamon {
 
 cinnamon.akka.actors {
   "/user/*" {
-    report-by = group
+    excludes = ["akka.http.*", "akka.stream.*"]
+    report-by = class
     traceable = on
   }
   "sharded-group" {
@@ -18,6 +19,7 @@ cinnamon.akka.actors {
 }
 
 cinnamon.akka.http.servers {
+#  "*:8082" {
   "*:*" {
     paths {
       "*" {
