--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.lightbend</groupId>
     <artifactId>akka-typed-distributed-state-blog-java</artifactId>
-    <version>1.1.9</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -20,7 +20,7 @@
         <grpc.version>1.43.2</grpc.version>
         <project.encoding>UTF-8</project.encoding>
         <!-- Declare Cinnamon version -->
-        <cinnamon.version>2.17.1</cinnamon.version>
+        <cinnamon.version>2.17.2</cinnamon.version>
         <!-- The Scala versions -->
         <scala.version>2.13.10</scala.version>
         <scala.binary.version>2.13</scala.binary.version>
@@ -224,6 +224,13 @@
             <artifactId>cinnamon-opentracing_${scala.binary.version}</artifactId>
             <version>${cinnamon.version}</version>
         </dependency>
+<!--
+        <dependency>
+            <groupId>com.lightbend.cinnamon</groupId>
+            <artifactId>cinnamon-opentracing-jaeger</artifactId>
+            <version>${cinnamon.version}</version>
+        </dependency>
+-->
         <dependency>
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-opentracing-shim</artifactId>
