update latest cinnamon

--- a/src/main/resources/cluster-application-docker-dns.conf
+++ b/src/main/resources/cluster-application-docker-dns.conf
@@ -48,12 +48,12 @@ akka {
         driver = "postgres"
         host = "localhost"
         host = ${?DB_HOST}
-        port = 5433
-        database = "yugabyte"
+        port = 5432
+        database = "postgres"
         database = ${?DB_NAME}
-        user = "yugabyte"
+        user = "postgres"
         host = ${?DB_USER}
-        password = "yugabyte"
+        password = "postgres"
         password = ${?DB_PASSWORD}
 
         # ssl {
