--- a/src/main/resources/nonsup-cluster-application-docker-dns.conf
+++ b/src/main/resources/nonsup-cluster-application-docker-dns.conf
@@ -39,17 +39,17 @@ akka {
     state.plugin = "akka.persistence.r2dbc.durable-state-store"
 
     r2dbc {
-      dialect = "yugabyte"
+      dialect = "postgres"
       connection-factory {
         driver = "postgres"
         host = "localhost"
         host = ${?DB_HOST}
-        port = 5433
-        database = "yugabyte"
+        port = 5432
+        database = "postgres"
         database = ${?DB_NAME}
-        user = "yugabyte"
+        user = "postgres"
         host = ${?DB_USER}
-        password = "yugabyte"
+        password = "postgres"
         password = ${?DB_PASSWORD}
 
         # ssl {
